--- a/style/main/main.css
+++ b/style/main/main.css
@@ -15,7 +15,6 @@ header {
     justify-content: space-between;
     align-items: center;
 }
-
 nav ul li {
     display: inline-block;
     padding: 0px 20px;
@@ -24,6 +23,7 @@ nav ul li {
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+    
 }
 
 nav ul li:hover {
@@ -64,6 +64,52 @@ footer {
     line-height: 30px;
     padding: 12px 0px;
 }
+.coloumn_two ul li
+{
+color: #8F8F8F;
+font-size: 20px;
+font-family: Rubik;
+font-weight: 400;
+line-height: 40px;
+word-wrap: break-word;
+list-style: none;
+column-span: 3;
+
+}
+.coloumn_two ul:first-of-type li:first-of-type{
+    color:black;
+}
+.block{
+    background-color: #058B8C;
+    height:250px;
+}
+.block h1{
+    text-align: center;
+    color: white;
+    font-size: 60px;
+    font-family: Rubik;
+    font-weight: 700;
+    
+    word-wrap: break-word;
+}
+.block p{
+    text-align: center;
+    color: white;
+font-size: 42px;
+font-family: Rubik;
+font-weight: 400;
+margin-top: 50px;
+word-wrap: break-word;
+}
+hr
+{
+    margin: 20px;
+}
+.coloumn_two
+{
+    display: flex;
+    justify-content: space-around;
+}
 
 .news_letter {
     display: flex;
@@ -92,4 +138,21 @@ footer {
     line-height: 30px;
     /* 166.667% */
     border: none;
+}
+.description p{
+    color: #8F8F8F;
+font-size: 18px;
+font-family: Rubik;
+font-weight: 400;
+line-height: 30px;
+word-wrap: break-word
+}
+.copyright p{
+    text-align: center;
+    color: #8F8F8F;
+font-size: 20px;
+font-family: Rubik;
+font-weight: 400;
+line-height: 30px;
+word-wrap: break-word
 }
